Add Challenge and ChallengerCard models with freezed.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    namespace = "com.example.challenge_365d"
+    //namespace = "com.example.challenge_365d"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
