--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: challenge_365d
+name: kaizen
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -41,6 +41,8 @@ dependencies:
   go_router: ^14.4.1
   http: ^1.2.2
   intl: ^0.19.0
+  firebase_core: ^3.7.0
+  cloud_firestore: ^5.4.5
 
 dev_dependencies:
   flutter_test:
