--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,46 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"challenge-eabe9","appId":"1:700522802809:android:c72a657afde9d94215aea8","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"challenge-eabe9","appId":"1:700522802809:ios:16411ca9e8c9687415aea8","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"challenge-eabe9","configurations":{"android":"1:700522802809:android:c72a657afde9d94215aea8","ios":"1:700522802809:ios:16411ca9e8c9687415aea8"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "challenge-eabe9",
+          "appId": "1:700522802809:android:c72a657afde9d94215aea8",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "ios": {
+        "default": {
+          "projectId": "challenge-eabe9",
+          "appId": "1:700522802809:ios:16411ca9e8c9687415aea8",
+          "uploadDebugSymbols": false,
+          "fileOutput": "ios/Runner/GoogleService-Info.plist"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "challenge-eabe9",
+          "configurations": {
+            "android": "1:700522802809:android:c72a657afde9d94215aea8",
+            "ios": "1:700522802809:ios:16411ca9e8c9687415aea8"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run build"
+      ]
+    }
+  ]
+}
