--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shimmer: ^3.0.0
   sembast: ^3.7.5+2
   path_provider: ^2.1.5
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
