--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,8 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "mocha --require ts-node/register 'tests/**/*.test.ts'"
   },
   "engines": {
     "node": "18"
@@ -16,16 +17,26 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "sinon": "^19.0.2"
   },
   "devDependencies": {
+    "@firebase/testing": "^0.20.11",
+    "@types/chai": "^4.3.11",
+    "@types/expect": "^24.3.2",
+    "@types/mocha": "^10.0.10",
+    "@types/sinon": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "chai": "^4.3.10",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^3.1.0",
-    "typescript": "^4.9.0"
+    "firebase-functions-test": "^3.3.0",
+    "mocha": "^10.2.0",
+    "ts-node": "^10.9.2",
+    "ts-sinon": "^2.0.2",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
