--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,15 +1,23 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "types": [
+      "mocha",
+      "node",
+      "chai"
+    ]
   },
   "compileOnSave": true,
   "include": [
-    "src"
+    "src/**/*.ts",
+    "tests/**/*.test.ts"
   ]
 }
