--- a/functions/package.json
+++ b/functions/package.json
@@ -14,10 +14,10 @@
   "engines": {
     "node": "18"
   },
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^6.1.1",
     "sinon": "^19.0.2"
   },
   "devDependencies": {
